# pylogger

./: README.md  pyproject.toml
src/pylogger/: __init__.py  colors.py  config.py  format.py  levels.py  logger.py  styles.py
